refactor: 活动列表 DB 只查 ID + Redis 读详情，未初始化缓存的不显示
- ActivityServiceImpl.listActivities() DB 仅查 id 列表
- 遍历 id 从 activity:{id} Hash 读详情，缓存未命中则跳过
- 回退 ACTIVITY_IDS_SET 方案，保持现有缓存架构不变
- 移除 admin 服务的 syncToRedisOnCreate，仍通过"初始化缓存"按钮写入